# telecom-root-cause-analysis

./: .gitignore  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: 02_root_cause_analysis.ipynb
src/root_cause_analysis/: __init__.py  config.py  data_generator.py  features.py  models.py
tests/: test_data_quality.py
